--- a/src/main/resources/org/urakeyboard/util/application.json
+++ b/src/main/resources/org/urakeyboard/util/application.json
@@ -6,32 +6,32 @@
   defaultProgramList: [
                        "80",
                        "0",
-                       "12",
-                       "23",
-                       "36",
-                       "43",
-                       "50",
-                       "67",
-                       "75",
+                       "19",
+                       "30",
+                       "40",
+                       "42",
+                       "55",
+                       "56",
+                       "64",
                        "127",
-                       "82",
-                       "90",
-                       "101",
-                       "110",
-                       "120",
-                       "10"
+                       "33",
+                       "54",
+                       "73",
+                       "106",
+                       "118",
+                       "122"
                        ],
   defaultChanelNumber: "16",
-  firstNote: "57",
-  noteCount: "28",
+  firstNote: "57", // 57
+  noteCount: "28", // 28
   blackKey: {
-    y: 20,
-    width: 50,
+    y: 24,
+    width: 50, // 50
     height: 200
   },
   whiteKey: {
-    y: 20,
-    width: 80,
+    y: 24,
+    width: 80, // 80
     height: 350
   },
   pitchBendArea: {
