--- a/build.gradle
+++ b/build.gradle
@@ -9,25 +9,17 @@ sourceCompatibility = 1.8
 sourceCompatibility = 1.8
 group = 'org.u-board'
 archivesBaseName = 'u-board'
-version = '0.3.3'
+version = '0.4.3'
 
 dependencies {
-    //compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
     compile group: 'org.uranoplums', name: 'uranoplums', version: '1.+'
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    // At first, follow in reflesh compile `scope' and jar to local.
-    // group: 'org.atilika.kuromoji', name: 'kuromoji', version: '0.7.7'
-    //testCompile group: 'org.atilika.kuromoji', name: 'kuromoji', version: '0.7.7'
 }
 
 repositories {
     maven {
         url "https://github.com/syany/uranoplums/tree/master/build/maven"
     }
-    //maven {
-    //    // Atilika Open Source repository (for kuromoji)
-    //    url "http://www.atilika.org/nexus/content/repositories/atilika"
-    //}
     mavenCentral()
     mavenLocal()
 }
@@ -45,6 +37,7 @@ ext {
 jar {
     manifest {
         attributes 'Main-Class' : mainClassName,
+                   'Class-Path':'. ' + configurations.runtime.files.collect { it.name }.join(' '),
                    'Implementation-Title': 'U-BOARD(Midi Keyboard EMULATOR)',
                    'Implementation-Version': version
     }
@@ -60,7 +53,7 @@ uploadArchives {
 
 [install.repositories.mavenInstaller, uploadArchives.repositories.mavenDeployer]*.pom*.whenConfigured { pom ->
     pom.project {
-        inceptionYear '2015'
+        inceptionYear '2017'
         packaging 'jar'
         licenses {
             license {
